@startuml
skinparam classAttributeIconSize 0
hide methods
left to right direction

class Plataforma {
  -String designacao
}

class AreaAtividade {
  -String id
  -String descBreve
  -String descDetalhada

}

class CompetenciaTecnica {
  -String codigo
  -String descBreve
  -String descDetalhada
}

class GrauProficiencia {
  -Integer valor
  -String designacao
}

class Categoria {
  -String id
  -String descricao
}

class CaraterCT {
  -Boolean obrigatoria
}

class Organizacao {
  -String nome
  -String NIF
  -String website
  -String telefone
  -String email
}

class Colaborador {
  -String nome
  -String funcao
  -String telefone
  -String email
}

class EnderecoPostal {
  -String local
  -String codPostal
  -String localidade
}

class Tarefa {
  -String referencia
  -String designacao
  -String descInformal
  -String descTecnica
  -Integer duracaoEst
  -Double custoEst
}

class TipoRegimento {
    -String designacao
    -String descRegras
}

class Administrativo {

}

class Freelancer {
    -String nome
    -String nif
    -String telefone
    -String email
}

class ReconhecimentoCT {
    -Date dataReconhecimento
}

class HabilitacaoAcademica {
    -String grau
    -String designacaoCurso
    -String nomeInstituicao
    -Double mediaCurso
}

note right
Curso e grau académico não foram considerados aqui por não serem, na nossa opinião, relevantes para o negócio. Rever posteriormente
end note



class Anuncio {
    -Date dtInicioPublicitacao
    -Date dtFimPublicitacao
    -Date dtInicioCandidatura
    -Date dtFimCandidatura
    -Date dtInicioSeriacao
    -Date dtFimSeriacao
}

class Candidatura {
    -Date dataCandidatura
    -Double valorPretendido
    -Integer nrDias
    -String txtApresentacao
    -String txtMotivacao
}

class Classificacao {
    -Integer lugar
}

class ProcessoSeriacao {
    -Date dataRealizacao
}

class Utilizador {
  -String nome
  -String email
  -String password
}

class AlgoritmoGeradorPasswords {
}

Plataforma "1" -- "*" AreaAtividade : possui >
Plataforma "1" -- "*" CompetenciaTecnica : possui >
Plataforma "1" -- "*" Categoria : possui >
Plataforma "1" -- "*" Organizacao : tem registadas >
Plataforma "1" -- "*" TipoRegimento : suporta >
Plataforma "1" -- "*" Anuncio : publicita >
Plataforma "1" -- "*" Freelancer : tem  >
Plataforma "1" -- "*" Administrativo : tem  >
Plataforma "1" -- "1" AlgoritmoGeradorPasswords : recorre a >

Organizacao "1" -- "1..*" Colaborador: tem >
Organizacao "1" -- "1" Colaborador: tem gestor >
Organizacao "0..1" -- "1" EnderecoPostal: localizada em >
Organizacao "1" -- "*" Tarefa: possui >

CompetenciaTecnica "*" -- "1" AreaAtividade : referente a >
CompetenciaTecnica "1" --- "*" GrauProficiencia : aplica  >

Categoria "*" -- "1" AreaAtividade: enquadra-se em >
Categoria "*" -- "*" CompetenciaTecnica: requer >
(Categoria, CompetenciaTecnica) .. CaraterCT
CaraterCT "*" -- "1" GrauProficiencia: exige (como mínimo)  >

Tarefa "*" -- "1" Categoria: enquadra-se em >
Tarefa "*" -- "1" Colaborador: especificada por >


Anuncio "0..1" -- "1" Tarefa: publicita >
Anuncio "0..1" -- "1" Tarefa: dá origem <
Anuncio "*" -- "1" TipoRegimento: rege-se por >
Anuncio "*" -- "1" Colaborador: publicado por >
Anuncio "1" -- "*" Candidatura: recebe >
Anuncio "1" -- "0..1" ProcessoSeriacao: espoleta >

Candidatura "*" -- "1"  Freelancer: realizada por >

ProcessoSeriacao "*" -- "1" TipoRegimento: decorre em concordância com >
ProcessoSeriacao "1" -- "1..*" Colaborador: realizado por >
ProcessoSeriacao "1" -- "*" Classificacao: resulta >

Classificacao "0..1" -- "1" Candidatura: referente a >

Administrativo "0..1" -- "1" Utilizador: atua como >

Colaborador "0..1" -- "1" Utilizador: atua como >

Freelancer "0..1" -- "1" Utilizador: atua como >
Freelancer "0..1" -- "1" EnderecoPostal: tem >
Freelancer "1" -- "*" HabilitacaoAcademica: tem >
Freelancer "1" -- "*" ReconhecimentoCT : recebe(u) >


ReconhecimentoCT "*" -- "1" CompetenciaTecnica: relativa a >
ReconhecimentoCT "*" -- "1" GrauProficiencia: reconhe >



AlgoritmoGeradorPasswords "1" -- "*" Utilizador : gera password >

@enduml
